/*
 * $Id: ChangeLog,v 1.2853 2004/04/30 03:50:45 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-30 17:50 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/include/hbgtwvt.h
    + #define WVT_FONTS_MAX  20
    + #define WVT_PENS_MAX   20
    + HFONT hUserFonts[ WVT_FONTS_MAX ]
    + HPEN  hUserPens[ WVT_PENS_MAX ]
      Array to hold user defined fonts and pens. The objects thus held are 
      released automatically when application terminates.

  * xharbour/source/rtl/gtwvt/gtwvt.c
    * Wvt_LoadPicture( nSlot, cImageFile )
      Reversed the parameter order for generic compatibality with other such functionality.

    * hb_wvt_gtDrawImage()
    * hb_wvt_gtRenderPicture()
      A big bug fixed which was causing Resource leak which was crashing the  application
      on OS which had low resource profiles such as Win9x family.
  
    + Wvt_LoadFont( nSlot, cFontFace, nHeight, nWidth, nWeight, lItalic, ;
                    lUnderline, lStrikeout,nCharSet, nQuality, nEscapement )
      Creates the font with requested attributes and stores the handle 
      in _s.hUserFont[ iSlot ( nSlot - 1 ) ]

    + Wvt_LoadPen( nSlot, nStyle, nThick, nRGBColor )
      As above.
 
    + Wvt_DrawLabelEx(  nRow, nCol, cLabel, nAlign, nTextColor, nBkColor, nSlot )
      Just like Wvt_DrawLabel() but with reduced parameters substituting <nSlot> 
      for all parameters related with font used. This way the need to recreate 
      the same font over and over is eliminated.

    + Wvt_DrawLineEx( nTop, nLeft, nBottom, nRight, nOrient, nFormat, nAlign, nSlotPen )
      Similar to Wvt_DrawLine() but substituting pen parameter with <nSlotPen>.

    + Wvt_DrawOutlineEx( nTop, nLeft, nBottom, nRight, nSlotPen )
      Similar to Wvt_DrawOutline() but substituting pen parameter with <nSlotPen>.
